--- a/.project
+++ b/.project
@@ -16,6 +16,15 @@
 	</natures>
 	<filteredResources>
 		<filter>
+			<id>1349353786130</id>
+			<name></name>
+			<type>22</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*~</arguments>
+			</matcher>
+		</filter>
+		<filter>
 			<id>1349277790569</id>
 			<name>tests</name>
 			<type>5</type>
